hphp/test/slow/methods-too-many.php.expectf
Fatal error: Class A has 65537 methods (maximum is 65535) in %s/methods-too-many.php on line 2
